--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "prettier": "prettier --check 'src/**/*.{js,jsx}' --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
+    "@mui/x-data-grid": "^7.26.0",
     "@tailwindcss/vite": "^4.0.3",
     "crypto-js": "^4.2.0",
     "react": "^18.3.1",
